# PFP_LZ77

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/src/: pfp_cst_benchmarks.cpp
include/common/: common.hpp
include/pfp/: CMakeLists.txt  PPS_support.hpp  dictionary.hpp  kd_tree_support.hpp  lz_77.hpp  pfp.hpp  pfp_cst.hpp
pipeline/: Chr_19.sh  test_disk.py
src/: CMakeLists.txt  kd_tree_test.cpp  lz_77_build.cpp  pfp-cst_build.cpp
test/src/: CMakeLists.txt  build_PPS_test.cpp
